mortgage-app/main/default/objects/Mortgage_Transaction__c/Mortgage_Transaction__c.object-meta.xml
<CustomObject>
    <label>Transaction</label>
    <nameField>
        <displayFormat>TRAN-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>