mortgage-app/main/default/objects/Mortgage_Transaction__c/fields/Amount_Real_Number__c.field-meta.xml
<CustomField>
    <fullName>Amount_Real_Number__c</fullName>
    <formula
    >IF( ISPICKVAL( Type__c , &apos;Repayment&apos;) ,  -Amount__c, Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Real Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>